--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,43 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --text-font: 'Poppins', sans-serif;
+  --background-white: #FCFEFD;
+  --text-black: #111715;
+  --text-size: 36px;
+  --text-line-height: 1.2em
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --h2-size: 36px;
+  --h2-height: 1.2em;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --link-size: 16px;
+  --link-weight: 600;
+  --link-height: 1em;
+  --link-primary: #FCFEFD;
+  --link-secondary: #111715;
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  /* NAVBAR */
+  --navbar-margin-top: 80px;
+  --navbar-gap: 80px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -77,6 +58,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--text-font);
 }
 
 html,
