--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,9 +1,9 @@
 .button {
   background-color: var(--background-white);
   color: var(--text-black);
-  border-radius: 50px;
-  font-size: 18px;
-  font-weight: 600;
+  border-radius: var(--link-border-radius);
+  font-size: var(--link-size);
+  font-weight: var(--link-weight);
   padding: 18px 25px;
   border: none;
   transition: all 0.15s ease;
