--- a/src/components/call-to-action-text/call-to-action-text.module.css
+++ b/src/components/call-to-action-text/call-to-action-text.module.css
@@ -27,3 +27,9 @@
   display: flex;
   justify-content: center;
 }
+
+@media only screen and (max-width: 1395px) {
+  .container {
+    padding: var(--vertical-padding);
+  }
+}
