--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,14 +1,3 @@
-.container {
-  max-width: 90%;
-  margin: 0 auto;
-  padding: 0 16px;
-}
-
-.navbar .right img {
-  width: 24px;
-  height: 24px;
-}
-
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -20,6 +9,7 @@
   left: 0;
   z-index: 3;
   background-color: var(--navbar-background);
+  max-height: var(--navbar-max-height);
   width: 100%;
   -webkit-backdrop-filter: blur(12px);
   backdrop-filter: blur(12px);
@@ -48,14 +38,14 @@
   transition: all 0.15s ease;
 }
 
+.navbar .right a:hover {
+  opacity: var(--navbar-link-opacity);
+}
+
 .navbar .reversed_link a {
   color: var(--background-white);
   background-color: var(--navbar-button-color);
   padding: var(--navbar-link-padding);
-}
-
-.navbar .right a:hover {
-  opacity: var(--navbar-link-opacity);
 }
 
 .navbar .hamburger {
@@ -87,21 +77,14 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 102.391px;
+  top: var(--navbar-max-height);
   right: 0;
   z-index: 2;
   padding: 16px;
-}
-
-.mobileNav img {
-  width: 24px;
-  height: 24px;
-  margin: 16px 0;
+  gap: 32px;
 }
 
 .mobileNav a {
-  text-decoration: none;
-  margin: 16px 0;
   text-decoration: none;
   color: var(--navbar-button-color);
   font-size: var(--navbar-link-size);
@@ -115,6 +98,8 @@
   text-decoration: underline;
 }
 
+/* DRAWER ANIMATION */
+
 .openDrawer {
   animation: openDrawerAnimation 0.3s forwards;
 }
@@ -122,8 +107,6 @@
 .closeDrawer {
   animation: closeDrawerAnimation 0.3s forwards;
 }
-
-/* DRAWER ANIMATION */
 
 @keyframes openDrawerAnimation {
   from {
