--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,25 @@
   --text-font: 'Poppins', sans-serif;
   --background-white: #fcfefd;
   --text-black: #111715;
+  --text-gray: #7c7c7c;
   --text-size: 36px;
+  --text-size-xs: 24px;
   --text-line-height: 1.2em;
-  --horizontal-padding: 300px;
+  --horizontal-padding: 40px;
   --vertical-padding: 100px;
+  --border-radius: 15px;
+  --standard-width: 1144px;
 
-  --h2-size: 36px;
+  --h2-size: 100px;
+  --h2-size-md: 64px;
+  --h2-size-xs: 42px;
   --h2-height: 1.2em;
+
+  --h3-size: 26px;
+  --h3-size-sm: 18px;
+
+  --p-size: 15px;
+  --p-size-sm: 12px;
 
   /* BUTTON */
   --link-opacity: 0.7;
@@ -76,16 +88,13 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+  scroll-padding-top: var(--navbar-max-height, 100px);
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--background-white);
 }
 
 a {
