--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,18 +1,27 @@
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 var(--horizontal-padding);
+.container {
+  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(12px);
+  background-color: var(--navbar-background);
   box-sizing: border-box;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 3;
-  background-color: var(--navbar-background);
-  max-height: var(--navbar-max-height);
   width: 100%;
-  -webkit-backdrop-filter: blur(12px);
-  backdrop-filter: blur(12px);
+  display: flex;
+  justify-content: center;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-height: var(--navbar-max-height);
+  max-width: var(--standard-width);
 }
 
 .navbar .left a {
