--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
   scroll-padding-top: var(--navbar-max-height, 100px);
 }
 
