--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --text-gray: #7c7c7c;
   --text-size: 36px;
   --text-size-md: 24px;
+  --text-size-sm: 14px;
   --text-weight: 500;
   --text-line-height: 1.2em;
   --horizontal-padding: 40px;
@@ -49,6 +50,7 @@
   --carrousel-item-padding: 20px;
   --carrousel-item-shadow: 0 35px 60px rgba(0, 0, 0, 0.1);
   --carrousel-item-size: 400px;
+  --carrousel-item-size-sm: 250px;
 }
 
 * {
