fixed navbar close animation and space on location section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,7 @@
   --navbar-link-border-radius: 50px;
   --navbar-link-padding: 10px 20px;
   --navbar-max-height: 100px;
+  --drawer-width: 200px
 
   /* OPINIONS CARROUSEL */
   --carrousel-item-gap: 50px;
