--- a/src/components/projects-grid/projects-grid.module.css
+++ b/src/components/projects-grid/projects-grid.module.css
@@ -1,9 +1,9 @@
 .container {
-  background-color: var(--background-white);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  z-index: 1;
 }
 
 .innerContainer {
