--- a/src/app/offer/[id]/page.module.css
+++ b/src/app/offer/[id]/page.module.css
@@ -30,7 +30,8 @@
 .container .bannerContainer {
   z-index: 0;
   width: 100%;
-  height: 61vh;
+  height: 50vh;
+  margin-top: var(--navbar-max-height);
   display: flex;
   justify-content: center;
   padding-top: var(--navbar-margin-top);
