--- a/src/app/projects/page.module.css
+++ b/src/app/projects/page.module.css
@@ -65,6 +65,7 @@
   border-radius: var(--border-radius);
   display: flex;
   transition: 0.5s transform ease;
+  margin: 0 40px;
 }
 
 .innerContainer .projectCard img {
@@ -82,6 +83,17 @@
 
 .innerContainer .projectCard:hover {
   transform: translateY(-8px);
+}
+
+@media only screen and (max-width: 1220px) {
+  .innerContainer .projectCard {
+    flex-direction: column;
+  }
+  .innerContainer .projectCard img {
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    flex: 1;
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 973px) {
