--- a/src/components/call-to-action-text/call-to-action-text.module.css
+++ b/src/components/call-to-action-text/call-to-action-text.module.css
@@ -46,3 +46,9 @@
     font-size: var(--text-size-xs);
   }
 }
+
+@media only screen and (max-width: 445px) {
+  .container button {
+    align-self: center;
+  }
+}
