--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: calc(var(--vertical-padding) * 2) 0;
+  margin: calc(var(--vertical-padding)) 0;
 }
 
 .container h2 {
